2011-01-04  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/define.boot: Handle toplevel 'where'.

2010-12-15  Ralf Hemmecke  <ralf@hemmecke.de>

	* configure.ac, INSTALL: rename from --with-... to --enable-...
          --with-algebra-optimization ==> --enable-algebra-optimization
          --with-gmp                  ==> --enable-gmp

2010-12-08  Ralf Hemmecke  <ralf@hemmecke.de>

	* configure.ac: add test for libgmp.so and gmp.h

2010-12-03  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/intrf.spad.pamphlet: Fix explimitedint.

2010-12-03  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/rdeef.spad.pamphlet,
	src/algebra/rdesys.spad.pamphlet: Correct bounds for RDE.

2010-12-03  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/efstruc.spad.pamphlet: Fix normaliztion
	of asec and acsc.

2010-11-28  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	Avoid wrong log simplification.
	* src/algebra/rdeef.spad.pamphlet:linearLog?(): Make
	sure log does not appear in degree 0 term.

2010-11-28  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/intrf.spad.pamphlet: Fail only when needed.

2010-11-28  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/intaf.spad.pamphlet,
	src/algebra/intalg.spad.pamphlet: Improve extended integration.
	src/algebra/curve.spad.pamphlet : Comment fix.

2010-11-28  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/define.boot: A fix for conditional exports.
	src/algebra/catdef.spad.pamphlet: Adjust.

2010-11-26  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/intef.spad.pamphlet:alg__split__root0(): Fix
	wrong root simplification introduced in rev. 903.

2010-11-25  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/mantepse.spad.pamphlet:qDiffDSV(): Avoid
	unwanted truncation.

2010-11-12  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/primitives.lisp: Work around Closure CL compiler bug.

2010-11-12  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
